# magma_tag_scraper

./: .gitignore  Cargo.toml
.github/: depandabot.yml
.github/workflows/: audit.yml  build.yml  linter.yml
src/: download.rs  main.rs  versions.rs
