[package]
name = "magma-scraper"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = "4.0.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.6.1", features = ["full"] } #todo: only enable sensible features
reqwest = {version = "0.11.14", features = ["rustls-tls"], default-features = false}
bytes = "1.0.1" #we need this for one fn return type in download.rs